# fairdo

./: .gitattributes  .gitignore  .gitlab-ci.yml  .readthedocs.yaml  LICENSE  README.md  README_deprecated.md  benchmark.py  clfMetricDiscriminationPlot.py  main.py  quick_eval.py  requirements.txt  results_2023-03-28-14:46:10.csv  results_2023-03-28-14:51:28.csv  setup.cfg  setup.py  test.py
assets/: FairdoLogo.drawio
deprecated/: Evaluation Tool.ipynb
doc/: conf.py  generate_docs.sh  index.rst  modules.rst
docs/: conf.py  fado.metrics.nonbinary.rst  fado.metrics.rst  fado.optimize.geneticoperators.rst  fado.optimize.rst  fado.preprocessing.rst  fado.rst  fado.utils.rst  fairdo.metrics.rst  fairdo.optimize.geneticoperators.rst  fairdo.optimize.mo.rst  fairdo.optimize.multi.rst  fairdo.optimize.operators.rst  fairdo.optimize.rst  fairdo.optimize.single.rst  fairdo.optimize.so.rst  fairdo.preprocessing.rst  fairdo.rst  fairdo.utils.rst  generate_docs.sh  index.rst  modules.rst  notes.md  requirements.txt
evaluation/: create_plots.py  dataset.py  helper.py  metric.py  pipeline.py  plot.py  plot_helper.py  plot_settings.py  requirements.txt  run_evaluation.py  settings.py  test_data.py
src/fado/: __about__.py  (+1 more)
tests/: benchmark_crossover.py  benchmark_dominating.py  benchmark_fronts.py  benchmark_mutation.py  benchmark_nondom_sort.py  benchmark_pool.py  benchmark_random_heuristic.py  test_crowding.py  test_evolution.py  test_nondom_sort.py  test_nondominated_sort.py  test_nsga2.py  test_nsga2Implemenation.py  test_objectivesize.py  test_seed.py  utils.py
tutorials/: 1. Default Preprocessor.py  1. Evaluating Heuristics.ipynb  1. MetricOptimizer.ipynb  1. Metricoptimizer - Removing and Generating Data for Fairness.ipynb  1.DefaultPreprocessor.py  2. Custom Preprocessor.py  2. Data Generators.ipynb  2. Evaluating Heuristics.ipynb  2. Intersectional Discrimination and Data Loss.ipynb  2. Removing Data for Fairness.ipynb  2. Test Consistency.ipynb  2.CustomPreprocessor.py  3. Generating Data for Fairness.ipynb  3. Penalty.py  4. Handling Non-Binary Attributes.ipynb  4. StandardPreprocessing.py  5. Evaluating Heuristics.ipynb  5.AnonymousFairData.py  6.MultiObjective.py  7.MultiVsSingle.py  GaussianCopula Test.ipynb  Penalty.py  Test.ipynb  Testing package.ipynb  requirements.txt  test.py
(+362 files in other folders)
