[metadata]
name = fado
version = 0.0.5
author = Anonymous
author_email = anonymous@anonymous.com
description = Fairness-Agnostic Data Optimization
license = MIT License
long_description = file: README.md
long_descriptions_content_type = text/markdown
url = https://github.com/
project_urls =
	Source Code = https://github.com/
classifiers =
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8, <4
install_requires =
    numpy>=1.19.2
    pandas>=1.0.0
    scikit-learn>=1.1.3
    scipy>=1.5.4
    sdv>=0.17.0
    #copulas>=0.7.0

[options.packages.find]
where = src
