[metadata]
name = fairdo
version = 0.1.3
author = Manh Khoi Duong
author_email = duong@hhu.de
description = Fairness-Agnostic Data Optimization
license = MIT License
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/
project_urls =
	Source Code = https://github.com/
classifiers =
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8, <=3.9
install_requires =
    numpy>=1.19.2
    pandas>=1.0.0
    sdv==0.17.2
    scikit-learn>=1.1.3
    scipy>=1.5.4
    pathos>=0.3.1
    #copulas>=0.7.0
    wheel>=0.35.0

[options.packages.find]
where = src
